--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=primePicks
+spring.datasource.url=jdbc:postgresql://localhost:5433/prime_picks_db
+spring.datasource.username=postgres
+spring.datasource.password=root123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+
